# adhan-esp32

./: .gitignore  CMakeLists.txt  adhan_select_screen_logic.cpp  adhan_select_screen_logic.h  adhan_select_screen_ui.cpp  adhan_select_screen_ui.h  app_state.cpp  app_state.h  audio_manager.cpp  audio_manager.h  azan_screen_logic.cpp  azan_screen_logic.h  azan_screen_ui.cpp  azan_screen_ui.h  filelist.txt  home_screen_logic.cpp  home_screen_logic.h  home_screen_ui.cpp  home_screen_ui.h  main.ino  prayers_screen_logic.cpp  prayers_screen_logic.h  prayers_screen_ui.cpp  prayers_screen_ui.h  settings_screen_logic.cpp  settings_screen_logic.h  settings_screen_ui.cpp  settings_screen_ui.h  start_screen_logic.cpp  start_screen_logic.h  ui.c  ui.h  ui_Screen_AdhanSelectScreen.c  ui_Screen_AdhanSelectScreen.h  ui_Screen_AzanScreen.c  ui_Screen_AzanScreen.h  ui_Screen_HomeScreen.c  ui_Screen_HomeScreen.h  ui_Screen_PrayersScreen.c  ui_Screen_PrayersScreen.h  (+12 more)
